@@ -99,11 +99,15 @@ unlink("myTst_*")
 
 ## test warnings for missing/autogenerated Rd content
 owd <- setwd("myTst")  # (currently) needed for \Sexpr macros
+prompt(identity, filename = "man/identity.Rd")
 print(res <- tools::checkRdContents(dir = "."))
 stopifnot(exprs = {
     res[["foo-class"]]$missing_description  # was part of checkRd() in R < 4.4.0
+    identical(res[["identity"]]$arguments_with_no_description, "x")
+    ## R < 4.4.0 treated \n and Rd comments as sufficient content
     ## FIXME: should also warn about auto-generated promptPackage() content
 })
+file.remove("man/identity.Rd")
 setwd(owd)
 
 
